Justificación re-elaborada

--- a/pfc.bib
+++ b/pfc.bib
@@ -1,27 +1,89 @@
-@book{Tanenbaum:2002,
- author = {Tanenbaum, Andrew},
- title = {Computer Networks},
- year = {2002},
- isbn = {0130661023},
- edition = {4th},
- publisher = {Prentice Hall Professional Technical Reference},
+@book{Tanenbaum:2002:CN:572404,
+	author = {Tanenbaum, Andrew},
+	title = {Computer Networks},
+	year = {2002},
+	isbn = {0130661023},
+	edition = {4th},
+	publisher = {Prentice Hall Professional Technical Reference},
+} 
+@book{Stallings:1996:DCC:249292,
+	author = {Stallings, William},
+	title = {Data and Computer Communications (5th Ed.)},
+	year = {1997},
+	isbn = {0-02-415425-3},
+	publisher = {Prentice-Hall, Inc.},
+	address = {Upper Saddle River, NJ, USA},
+}
+@book{Anderson:2013:SRP:2563597,
+	author = {Anderson, Quinton},
+	title = {Storm Real-Time Processing Cookbook},
+	year = {2013},
+	isbn = {1782164421, 9781782164425},
+	publisher = {Packt Publishing},
+} 
+@inproceedings{Hunt:2010:ZWC:1855840.1855851,
+	author = {Hunt, Patrick and Konar, Mahadev and Junqueira, Flavio P. and Reed, Benjamin},
+	title = {ZooKeeper: Wait-free Coordination for Internet-scale Systems},
+	booktitle = {Proceedings of the 2010 USENIX Conference on USENIX Annual Technical Conference},
+	series = {USENIXATC'10},
+	year = {2010},
+	location = {Boston, MA},
+	pages = {11--11},
+	numpages = {1},
+	publisher = {USENIX Association},
+	address = {Berkeley, CA, USA},
+} 
+@book{junqueira2013zookeeper,
+	title={ZooKeeper: Distributed Process Coordination},
+	author={Junqueira, F. and Reed, B.},
+	isbn={9781449361280},
+	year={2013},
+	publisher={O'Reilly Media}
+}
+@misc{rfc791,
+	author="J. Postel",
+	title="{Internet Protocol}",
+	series="Request for Comments",
+	number="791",
+	howpublished="RFC 791 (INTERNET STANDARD)",
+	publisher="IETF",
+	organization="Internet Engineering Task Force",
+	year=1981,
+	month=sep,
+	note="Updated by RFCs 1349, 2474, 6864",
+	url="http://www.ietf.org/rfc/rfc791.txt",
+}
+@misc{rfc793,
+	author="J. Postel",
+	title="{Transmission Control Protocol}",
+	series="Request for Comments",
+	number="793",
+	howpublished="RFC 793 (INTERNET STANDARD)",
+	publisher="IETF",
+	organization="Internet Engineering Task Force",
+	year=1981,
+	month=sep,
+	note="Updated by RFCs 1122, 3168, 6093, 6528",
+	url="http://www.ietf.org/rfc/rfc793.txt",
 }
 
-@book{Anderson:2013,
- author = {Anderson, Quinton},
- title = {Storm Real-time Processing Cookbook},
- year = {2013},
- isbn = {978-1-78216-442-5},
- edition = {1th},
- publisher = {Packt Publishing Ltd.},
+@misc{rfc1180,
+	author="T.J. Socolofsky and C.J. Kale",
+	title="{TCP/IP tutorial}",
+	series="Request for Comments",
+	number="1180",
+	howpublished="RFC 1180 (Informational)",
+	publisher="IETF",
+	organization="Internet Engineering Task Force",
+	year=1991,
+	month=jan,
+	url="http://www.ietf.org/rfc/rfc1180.txt",
 }
 
-@book{Junqueira:2013,
- author = {Junqueira, Flavio},
- title = {ZooKeeper: Distributed Process Coordination},
- year = {2013},
- isbn = {978-1-4493-6130-3},
- edition = {1th},
- publisher = {O'Reilly Media},
-}
-
+@book{Leibiusky:2012:GSS:2432208,
+	author = {Leibiusky, Jonathan and Eisbruch, Gabriel and Simonassi, Dario},
+	title = {Getting Started with Storm},
+	year = {2012},
+	isbn = {1449324010, 9781449324018},
+	publisher = {O'Reilly Media, Inc.},
+} 
