--- a/pfc.tex
+++ b/pfc.tex
@@ -5,6 +5,8 @@
 \usepackage{graphicx}
 \usepackage{draftwatermark}
 \usepackage{lineno}
+\usepackage[table]{xcolor}
+
 
 \bibliography{pfc.bib}
 
@@ -36,12 +38,12 @@
 	
 \end{titlepage}
 
-\setpagewiselinenumbers
 \modulolinenumbers[5]
 \linenumbers
 
 \include{justificacion}
 \include{metodologia}
+\include{riesgos}
 \newpage
 
 \nocite{*}
