Entrega metodología. Justificación aprobada. Se agrega Gantt

--- a/pfc.bib
+++ b/pfc.bib
@@ -87,3 +87,10 @@
 	isbn = {1449324010, 9781449324018},
 	publisher = {O'Reilly Media, Inc.},
 } 
+
+@BOOK{ISOIEC9126,
+	title = {ISO/IEC 9126. Software engineering -- Product quality},
+	publisher = {ISO/IEC},
+	year = {2001},
+	author = {ISO/IEC}
+}
