Archivos renombrados. Se agrega la dirección al repositorio del documento.

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -8,7 +8,7 @@
 \usepackage[table]{xcolor}
 
 
-\bibliography{pfc}
+\bibliography{anteproyecto}
 
 \SetWatermarkText{BORRADOR}
 \SetWatermarkScale{5}
@@ -34,6 +34,10 @@
 	dirijido por\par
 	Ing. Gabriel \textsc{Filippa}
 
+	\vfill
+	
+	Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
+	
 	\vfill
 	
 	% Bottom of the page
