Agregados riesgos para primer preentrega

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -6,7 +6,9 @@
 \usepackage{draftwatermark}
 \usepackage{lineno}
 \usepackage[table]{xcolor}
-
+%\usepackage{showframe}
+\usepackage[a4paper]{geometry}
+\usepackage{caption}
 
 \bibliography{anteproyecto}
 
@@ -50,7 +52,7 @@
 
 \include{justificacion}
 \include{metodologia}
-%\include{riesgos}
+\include{riesgos}
 \newpage
 
 \nocite{*}
