--- a/riesgos.tex
+++ b/riesgos.tex
@@ -1,29 +1,59 @@
 \section*{Riegos}
 
-Para realizar el análisis cualitativo de los riesgos se asigna una probabilidad de ocurrencia y un impacto a cada riesgo. Luego se priorizan según su \textit{severidad}. Los riesgos identificados son:
+En esta sección se enumeran los riesgos identificados, indicadores y estrategia a adoptar según corresponda. Para realizar el análisis cualitativo de los riesgos se asigna una probabilidad de ocurrencia y un impacto a cada riesgo. Luego se priorizan según su \textit{severidad}. Los riesgos identificados son:
+
+\begin{enumerate}
+\item \textbf{No se pueden satisfacer las restricciones de performance:} la característica principal del sistema es la posibilidad de procesar tráfico en tiempo real. Puede darse un escenario donde las tecnologías disponibles no permitan alcanzar este requisito.
+
+\textbf{Indicador:} se observan demoras o un progreso lento en las etapas de Núcleo y/o Integración. \\
+\textbf{Probabilidad de ocurrencia:} Media. \\
+\textbf{Impacto:} Muy alto. \\
+\textbf{Estrategia a adoptar:} Mitigar (probabilidad).
+Se revisan continuamente los entregables de la etapa de Diseño con el fin de mejorar su calidad.
+
+\item \textbf{No se dispone del hardware necesario:} el servidor de aplicaciones necesario para el desarrollo de la aplicación no se encuentra disponible
+
+\textbf{Indicador:} la etapa de Núcleo no puede comenzar. \\
+\textbf{Probabilidad de ocurrencia:} Media. \\
+\textbf{Impacto:} Alto. \\
+\textbf{Estrategia a adoptar:} Mitigar (impacto).
+Se utilizará la infraestructura provista por la facultad.
+
+\item \textbf{Los módulos del sistema no pueden ser integrados correctamente:} aunque cada uno de los módulos cumpla con los requisitos funcionales del sistema, puede ocurrir que el rendimiento se vea degradado producto de los retardos que puede introducir las interfaces de comunicación entre los módulos.
+
+\textbf{Indicador:} se observan demoras o un progreso lento en la etapa de Integración. \\
+\textbf{Probabilidad de ocurrencia:} Baja. \\
+\textbf{Impacto:} Muy alto. \\
+\textbf{Estrategia a adoptar:} Mitigar (probabilidad).
+Se revisan continuamente los entregables de la etapa de Integración con el fin de mejorar su calidad.
+
+\item \textbf{Las tecnologías seleccionadas no pueden ser integradas:} se utilizarán un conjunto de tecnologías que deben coexistir para realizar el procesamiento de los datos. Es posible que se encuentren incompatibilidades entre alguna de ellas y no sea posible utilizarlas de forma conjunta.
+
+\textbf{Indicador:} se observan demoras o un progreso lento en la etapa de Diseño. \\
+\textbf{Probabilidad de ocurrencia:} Baja. \\
+\textbf{Impacto:} Alto. \\
+\textbf{Estrategia a adoptar:} Mitigar (impacto). \\
+Se realiza un estudio comparativo de varias tecnologías para disponer de alternativas a las determinadas inicialmente.
+
+\item \textbf{El sistema no puede ser probado en un entorno productivo:} la implementación del sistema en un entorno productivo implica un riesgo para los administradores de las redes. Por esto, es posible que no se disponga de un escenario real para las pruebas finales de integración.
+
+\textbf{Probabilidad de ocurrencia:} Baja. \\
+\textbf{Impacto:} Bajo. \\
+\textbf{Estrategia a adoptar:} Aceptar (activamente). \\
+Se generarán los datos necesarios para realizar pruebas de integración.
+
+\end{enumerate}
 
 \begin{center}
-\begin{tabular}{|l||c|c|c|}
-\hline
-Riesgo & Imp. & \% ocur. & Sev. \\
-\hline
-No se pueden satisfacer las restricciones de performance.  & 5 & 3 & 15 \\
-No se dispone del hardware necesario. & 4 & 3 & 12 \\
-Los módulos del sistema no pueden ser integrados correctamente. & 4 & 2 & 8 \\
-Las tecnologías seleccionadas no pueden ser integradas. & 4 & 2 & 8 \\
-El sistema no puede ser probado en un entorno productivo. & 2 & 2 & 4 \\
 
-\hline
-\end{tabular}
 \end{center}
 
 \subsection*{Análisis Riesgos}
-Del análisis de la matriz de probabilidad e impacto se deciden las estrategias.
+En esta sección se muestra el análisis realizado de los riesgos del proyecto, luego se definen las estrategias a adoptar y los riesgos ordenados por importancia según su severidad.
 
 \begin{center}
-\renewcommand{\arraystretch}{1.2}
+\vspace{15px}
 \begin{tabular}{|c||c|c|c|c|c|}
-
 	\hline
 	& 1 & 2 & 3 & 4 & 5 \\ \hline
 	\hline
@@ -33,26 +63,61 @@ Del análisis de la matriz de probabilidad e impacto se deciden las estrategias.
 	4 & \cellcolor[gray]{0.8} & \cellcolor[gray]{0.6} & \cellcolor[gray]{0.6} & \cellcolor[gray]{0.4} & \cellcolor[gray]{0.4} \\ \hline
 	5 & \cellcolor[gray]{0.6} & \cellcolor[gray]{0.6} & \cellcolor[gray]{0.4} & \cellcolor[gray]{0.4} & \cellcolor[gray]{0.4} \\ \hline
 \end{tabular}
-\qquad \qquad
+\captionof{table}{Matriz probabilidad/impacto.}
+
+\vspace{15px}
+
 \begin{tabular}{|c|l|}
 	\hline Severidad & Estrategia \\ \hline
 	menor que 4 & Aceptar \\ \hline
 	5 a 15 & Mitigar \\ \hline
 	16 a 25 & Evitar \\ \hline
-	
 \end{tabular}
+\captionof{table}{Estrategia a adoptar según severidad.}
+
+\vspace{15px}
+
+\begin{tabular}{|l||c|c|c|}
+	\hline
+	Riesgo & Imp. & \% ocur. & Sev. \\
+	\hline
+	No se pueden satisfacer las restricciones de performance.  & 5 & 3 & 15 \\
+	No se dispone del hardware necesario. & 4 & 3 & 12 \\
+	Los módulos del sistema no pueden ser integrados correctamente. & 5 & 2 & 10 \\
+	Las tecnologías seleccionadas no pueden ser integradas. & 4 & 2 & 8 \\
+	El sistema no puede ser probado en un entorno productivo. & 2 & 2 & 4 \\
+	\hline
+\end{tabular}
+\captionof{table}{Lista de riesgos ordenados por severidad.}
+
 \end{center}
+
+\newpage
 
 \section*{Presupuesto}
 
-Duración total del proyecto: 480hs.
+A continuación se detalla el presupuesto necesario para el desarrollo del proyecto. El valor de la infraestructura de hardware necesaria es aproximado y comprende una estación de trabajo para el desarrollo del sistema y un servidor dedicado con 3 interfaces de red. Las especificaciones técnicas se determinarán en la etapa de Diseño del proyecto.
 
-\begin{itemize}
-\item Estación de trabajo: \$16000.
-\item Servidor de desarrollo: \$10000.
-\item Conexión a internet: \$3600.
-\item Horas de trabajo (\$40 por hora): \$19200.
-\end{itemize}
+\vspace{12px}
 
-Costo total: \$48800.
+\begin{centering}
+
+\begin{tabular}{l c c r}
+\textbf{Infraestructura} & & & \\
+Estación de trabajo & & & \$16000. \\
+Servidor de desarrollo & & & \$10000. \\
+\hline
+\textbf{Servicios} & & &\\
+Conexión a internet & & & \$4000 \\
+\hline
+\textbf{Recursos humanos} & \textbf{Costo por hora} & \textbf{Horas} \\
+Diseñador & \$40 & 84 & \$3360 \\
+Desarrollador & \$40 & 364 & \$14560 \\
+Tester & \$40 & 40 & \$1600 \\
+\hline
+\textbf{Costo total} & & & \$\textbf{49520}.
+\end{tabular}
+\end{centering}
+
+
 
