Correcciones generales. Se refinaron los requisitos funcionales.

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -33,7 +33,7 @@
 	\vspace{2cm}
 	{\Large\itshape Pineda Leandro\par}
 	\vfill
-	dirijido por\par
+	dirigido por\par
 	Ing. Gabriel \textsc{Filippa}
 
 	\vfill
@@ -43,6 +43,7 @@
 	\vfill
 	
 	% Bottom of the page
+	\large Santa Fe\par
 	{\large \today\par}
 	
 \end{titlepage}
