Entrega de integración. Se refinaron los costos del proyecto. Revisión general del documento

--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -51,11 +51,11 @@
 \modulolinenumbers[5]
 \linenumbers
 
-\include{justificacion}
-\include{metodologia}
-\include{riesgos}
+\input{justificacion}
+\input{metodologia}
+\input{riesgos}
 \newpage
-
+ 
 \nocite{*}
 \printbibliography
 
