--- a/metodologia.tex
+++ b/metodologia.tex
@@ -2,7 +2,9 @@
 
 La metodología de desarrollo del proyecto será incremental e iterativa. Incremental porque varias componentes del sistema se desarrollarán en momentos diferentes y serán integradas cuando sean completadas. Iterativa pues se invertirán esfuerzos en revisar constantemente partes del sistema, tanto para mejorar la calidad externa como interna del software\cite{ISOIEC9126}.
 
-Con esta metodología se puede dividir el trabajo en incrementos que son revisados constantemente a medida que el proyecto se ejecuta. Luego de una investigación preliminar acerca de las tecnologías disponibles y sus características, correspondiente a la primera fase de la ejecución del proyecto, se tiene el punto de partida para comenzar el desarrollo. Dado que es necesario que el sistema cumpla con los requisitos de \textit{tiempo real}, el incremento donde se implementan las funcionalidades esenciales de captura de paquetes es revisado constantemente para mejorar su calidad mientras se desarrollan los incrementos de informes y visualización (ver Plan de Tareas). Una vez todos los incrementos son terminados, serán integrados y se llevarán a cabo las pruebas de integración correspondientes.
+Con esta metodología se puede dividir el trabajo en incrementos que son revisados constantemente a lo largo de la ejecución del proyecto. Luego de una investigación preliminar acerca de las tecnologías disponibles y sus características, correspondiente a la primera fase, se tiene el punto de partida para comenzar el desarrollo. Dado que es necesario que el sistema cumpla con los requisitos de \textit{tiempo real}, el incremento donde se implementan las funcionalidades esenciales de captura de paquetes es revisado constantemente para mejorar su calidad mientras se desarrollan los incrementos de informes y visualización (ver Plan de Tareas). Una vez todos los incrementos son terminados, serán integrados y se llevarán a cabo las pruebas de integración correspondientes.
+
+\newpage
 
 \section*{Plan de Tareas}
 
@@ -21,7 +23,21 @@ En este incremento se integran las funcionalidades de captura y filtrado. Ademá
 
 Al finalizar la primera iteración de cada incremento se obtiene una herramienta de software con las funcionalidades descriptas y calidad de producto final, con excepción de la etapa de diseño donde se obtendrá un informe en soporte escrito o digital.
 
-\newpage
+
+\begin{table}[htbp]
+	\begin{center}	
+		\begin{tabular}{|l|c|}
+			\hline 
+			Entregable & Fecha de entrega \\ \hline
+			Informe de avance 1 & 09/09/2016 \\
+			Informe de avance 2 & 07/10/2016 \\
+			Informe de avance 3 & 09/12/2016 \\
+			Informe de avance 4 & 10/02/2017 \\ \hline
+		\end{tabular}
+	\end{center}
+	\caption{Fechas de entrega de informes de avance.}
+	\label{table:informes}
+\end{table}
 
 \subsubsection*{Plan de Tareas}
 
@@ -71,9 +87,8 @@ La duración total del proyecto es de $488$ horas, con una dedicación de $20$ h
 \end{table}
 
 
-
-
 \subsection*{Informes de avance}
+
 
 Se presentarán 4 informes de avance en las fechas de finalización de cada etapa, detalladas en el Cuadro \ref{table:cronograma}. A continuación se detalla que información será incluida en cada informe:
 
@@ -89,27 +104,14 @@ Contendrá una descripción de los mecanismos de filtrado utilizados y los resul
 \paragraph{Informe de avance 4}
 Contendrá una información sobre los avances en el desarrollo de la interfaz de usuario. Se describirán las pruebas de integración del sistema. Además tendrá información sobre cambios realizados en los entregables anteriores.
 
-\begin{table}[htbp]
-	\begin{center}	
-		\begin{tabular}{|l|c|}
-			\hline 
-			Entregable & Fecha de entrega \\ \hline
-			Informe de avance 1 & 09/09/2016 \\
-			Informe de avance 2 & 07/10/2016 \\
-			Informe de avance 3 & 09/12/2016 \\
-			Informe de avance 4 & 10/02/2017 \\ \hline
-		\end{tabular}
-	\end{center}
-	\caption{Fechas de entrega de informes de avance.}
-	\label{table:informes}
-\end{table}
+\newpage
 
 \subsection*{Diagrama de Gantt}
 
 A continuación se muestra el diagrama de Gantt del proyecto.
 
 \begin{figure}[htbp!]
-	\includegraphics[scale=.35]{gantt_png}
+	\includegraphics[scale=.4]{gantt_png}
 	\caption{Diagrama de Gantt del proyecto.}
 	\label{fig:gantt}
 \end{figure}
