Se agregan algunos detalles al costo

--- a/riesgos.tex
+++ b/riesgos.tex
@@ -120,12 +120,17 @@ A continuación se detalla el presupuesto necesario para el desarrollo del proye
 		\textbf{Servicios} & & &\\ \hline
 		Servicio de Internet & & & \$4000 \\
 		\hline \hline
+		\textbf{Insumos} & & &\\ \hline
+		Resma de Hojas & & & \$80 \\
+		Toner & & & \$200 \\
+		Artículos de librería & & & \$150 \\
+		\hline \hline
 		\textbf{Recursos humanos} & \textbf{Costo por hora} & \textbf{Horas} \\
 		Diseñador & \$110 & 84 & \$9420 \\
 		Desarrollador & \$100 & 364 & \$36400 \\
 		Tester & \$85 & 40 & \$3400 \\
 		\hline \hline
-		\textbf{Costo total} & & & \$\textbf{73911}.
+		\textbf{Costo total} & & & \$\textbf{74341}.
 	\end{tabular}
 \end{center}
 
