--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -12,7 +12,7 @@
 
 \bibliography{anteproyecto}
 
-\SetWatermarkText{BORRADOR}
+\SetWatermarkText{}
 \SetWatermarkScale{5}
 \SetWatermarkLightness{0.95}
 
@@ -38,9 +38,9 @@
 
 	\vfill
 	
-	Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
+	%Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
 	
-	\vfill
+	%\vfill
 	
 	% Bottom of the page
 	\large Santa Fe\par
@@ -49,8 +49,9 @@
 \end{titlepage}
 
 \modulolinenumbers[5]
-\linenumbers
+%\linenumbers
 
+\input{resumen}
 \input{justificacion}
 \input{metodologia}
 \input{riesgos}
