Agregada la correción de riesgos

--- a/riesgos.tex
+++ b/riesgos.tex
@@ -105,16 +105,18 @@ A continuación se detalla el presupuesto necesario para el desarrollo del proye
 	\begin{tabular}{l c c r}
 		\hline \hline
 		
-		\textbf{Infraestructura} & & & \\ \hline
+		\textbf{Bienes de capital} & & & \\ \hline
 		Estación de trabajo (costo de amortización)& & & \$2691. \\
 		\textit{Procesador AMD FX6} & & &\\
-		\textit{Memoria 16GB DDR3} & & & \\
+		\textit{Memoria 8GB DDR3} & & & \\
 		\textit{Monitores (configuración dual)} & & & \\
 		\hline
 		Servidor de desarrollo & & & \$18000. \\
 		\textit{Procesador Intel i5 o similar} & & & \\
 		\textit{Memoria 16GB DDR3} & & & \\
 		\textit{Interfaz de red para servidor (2 puertos)} & & & \\
+		\hline
+		Impresora (costo de amortización) & & & \$318 \\
 		\hline \hline
 		
 		\textbf{Servicios} & & &\\ \hline
@@ -126,11 +128,12 @@ A continuación se detalla el presupuesto necesario para el desarrollo del proye
 		Artículos de librería & & & \$150 \\
 		\hline \hline
 		\textbf{Recursos humanos} & \textbf{Costo por hora} & \textbf{Horas} \\
+		Director de proyecto & \$150 & 40 & \$6000 \\
 		Diseñador & \$110 & 84 & \$9420 \\
 		Desarrollador & \$100 & 364 & \$36400 \\
 		Tester & \$85 & 40 & \$3400 \\
 		\hline \hline
-		\textbf{Costo total} & & & \$\textbf{74341}.
+		\textbf{Costo total} & & & \$\textbf{80659}.
 	\end{tabular}
 \end{center}
 
